<resources>
    <string name="app_name">Riyadh Tour Guide</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="main_airport">Main Airport</string>
    <string name="sa">Saudi Arabia</string>
    <string name="KKIA">King Khalid International Airport (KKIA)</string>
    <string name="about">About Riyadh</string>
    <string name="about_paragraph">Riyadh is the capital and most populous city of Saudi Arabia. It is also the capital of Riyadh Province and belongs to the historical regions of Najd and Al-Yamama. It is situated in the center of the Arabian Peninsula on a large plateau and home to more than six million people. The city is divided into 15 municipal districts, managed by the Municipality of Riyadh headed by the mayor of Riyadh, and the Development Authority of Riyadh which is chaired by the governor of the Province, Faisal bin Bandar Al Saud. The current mayor is Ibrahim Mohammed Al-Sultan.</string>
    <string name="local_time">Local Time</string>
    <string name="location">Location</string>
    <string name="top10R">Top 10 Restaurants</string>
    <string name="top10H">Top 10 Hotels</string>
    <string name="top10T">Top 10 Tours</string>
    <string name="alorjouan_rest">Al Orjouan</string>
    <string name="alorjouan_desc">Savor a delectable assortment of culinary delights at Al Orjouan, widely regarded as one of the finest buffet restaurants in Riyadh. Breakfast, lunch, and dinner are served daily in The Ritz-Carlton, Riyadh dining room\'s in relaxed and refined atmosphere.</string>
    <string name="lusin_rest">Lusin</string>
    <string name="lusin_desc">Prepare yourself to savour an evocative cuisine to celebrate the centuries old tradition of a proud people. Lusin serves its guests enticing Armenian specialities renowned for its distinctive aromas and flavourful preparations.</string>
    <string name="nozomii_rest">Nozomi</string>
    <string name="nozomi_desc">A Unique Dining Experience Award Winning Nozomi brings an exciting and unique dining experience from Knightsbridge, London to the heart of Riyadh. Located in a spectacular new building on Dabab Street.</string>
    <string name="theglobe_rest">The Globe</string>
    <string name="theglobe_desc">The Globe, is unique among Riyadh restaurants. Encapsulated in the stunning golden geodesic orb that tops Al Faisaliah Tower, guests enjoy a unique perspective of the Kingdom\'s first city. </string>
    <string name="sultanSteakhouse_rest">Sultan Steakhouse</string>
    <string name="sultanSteakhouse_desc">Steakhouse, Barbecue, Turkish, Halal, Gluten Free Options</string>
    <string name="tugra_rest">Tugra</string>
    <string name="tugra_desc">Turkish, Middle Eastern, Mediterranean, Vegetarian Friendly, Vegan Options, Halal.</string>
    <string name="kampai_rest">Kampai</string>
    <string name="kampai_desc">Japanese, Sushi, Asian, Vegetarian Friendly, Halal, Vegan Options.</string>
    <string name="chorisia_rest">Chorisia Lounge</string>
    <string name="chorisia_desc">An elegant interior and peaceful al fresco dining area offer equally beautiful spaces to enjoy breakfast, lunch or Afternoon Tea at Chorisia Lounge.</string>
    <string name="hong_rest">Hong</string>
    <string name="hong_desc">Experience the exhilarating new vibe at Hong, our breath-taking restaurant that is bringing China to life in Riyadh. Chinese Chef de cuisine Peter Li is excited to share his culinary creations, including both traditional and contemporary dishes.</string>
    <string name="elements_rest">Elements</string>
    <string name="elements_desc">Cosmopolitan, vibrant Riyadh meets its culinary match at Elements, the city\'s most exciting and diverse interactive dining experience. Enjoy sumptuous cuisine from around the globe, expertly and authentically prepared before your eyes.</string>
    <string name="marriott_hotel">Marriott</string>
    <string name="marriott_desc">The Riyadh Marriott Hotel offers an exceptional experience for business and leisure guests in Saudi Arabia, with 5-star accommodation and superb amenities.</string>
    <string name="rafal_hotel">Rafal</string>
    <string name="rafal_desc">Set in an ultramodern, 70-story skyscraper, this ritzy hotel is 6 km from the Al Nakheel Tower and 20 km from Tuwaiq Palace</string>
    <string name="the_ritz_carlton_hotel">The Ritz Carlton</string>
    <string name="the_ritz_carlton_desc">Experience The Ritz-Carlton luxury hotels and resorts that craft unforgettable travel experiences in the world\'s top destinations.</string>
    <string name="intercontinental_hotel">Intercontinental</string>
    <string name="intercontinental_desc">The InterContinental® Riyadh hotel is a luxury resort hotel, located just five minutes from the city\'s exciting, high-rise business and shopping district.</string>
    <string name="four_seasons_hotel">Four Seasons</string>
    <string name="four_seasons_desc"> Four Seasons Hotel Riyadh at Kingdom Centre offers luxury accommodations and intuitive service high above the city</string>
    <string name="moevenpick_hotel">Moevenpick</string>
    <string name="moevenpick_desc">Enjoy a lively urban feel and relaxed ambiance with excellent dining in Riyadh\'s business district on King Fahad Road.</string>
    <string name="narcissus_hotel">Narcissus</string>
    <string name="narcissus_desc">Narcissus Hotel and Residence is located in the heart of Riyadh\'s business and financial centre.</string>
    <string name="rosh_rayhaan_hotel">Rosh Rayhaan</string>
    <string name="rosh_rayhaan_desc">Rosh Rayhaan by Rotana, the 5-star hotel in Riyadh is located on Olaya Street near by Tahlia street. </string>
    <string name="kempinski_hotel">Kempinski</string>
    <string name="kempinski_desc">Book a stay at  Kempinski Hotel located in Riyadh and enjoy 5 star luxury.</string>
    <string name="alfaisaliah_hotel">Al Faisaliah</string>
    <string name="alfaisaliah_desc">This luxury, high-rise hotel next to the Al Daisaliyah Center skyscraper is 8 km from the National Museum of Saudi Arabia and 38 km from King Khalid International Airport.</string>
    <string name="al_nakheel_mall">Al Nakheel Mall</string>
    <string name="al_nakheel_mall_desc">Al Nakheel Mall is one of Arabian Centres large portfolio of shopping centres.</string>
    <string name="alfaisaliah_mall">Al Faisaliah Mall</string>
    <string name="alfaisaliah_mall_desc">Shopping mall with high brands</string>
    <string name="king_abdullah_park">King Abdullah Park</string>
    <string name="king_abdullah_park_desc">King Abdullah Park is the largest park of it\'s kind in the Kingdom</string>
    <string name="kingdom_tower">Kingdom Tower</string>
    <string name="kingdom_tower_desc">The Kingdom tower is considered the most luxurious building in the region, and highly favored by all visitors.</string>
    <string name="masmak_fort">Masmak Fort</string>
    <string name="masmak_fort_desc">This renovated 19th-century mud fortress looks like a giant sandcastle, and contains costumes, handicrafts, a sitting room, a courtyard and a well.</string>
    <string name="national_museum">The National Museum</string>
    <string name="national_museum_desc">The history of Islam is the major focus of this museum, which consists of 10 galleries, courtyards and a section that houses fancy cars and other belongings of the founding king of Saudi Arabia.</string>
    <string name="salam_park">Salam Park</string>
    <string name="salam_park_desc">The biggest park in Riyadh </string>
    <string name="turki_bin_abdullah_mosque">Turki Bin Abdullah Mosque</string>
    <string name="turki_bin_abdullah_mosque_desc">The Mosque continues to perform his mission as grand mosque in the city for long decades. It was rebuild on its previous sites over a area of 16,800square-meter</string>
    <string name="wadi_hanifah">Wadi Hanifah</string>
    <string name="wadi_hanifah_desc"> It is a valley runs for a length of 120 km (75 mi) from northwest to southeast, cutting through the city of Riyadh.</string>
    <string name="wadi_namar">Wadi Namar</string>
    <string name="wadi_namar_desc">Wadi Namar Dam is one of the tributaries of Wadi Hanifah and the water flowing to Wadi Hanifah Water Channel that ends up to Al-Hair Lake.</string>
</resources>
