<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:orientation="vertical"
    android:paddingBottom="6dp"
    android:paddingLeft="6dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="170dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/riyadh" />

            <TextView
                android:id="@+id/country"
                style="@style/topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/country" />

            <TextView
                android:id="@+id/sa"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/country"
                android:text="@string/sa" />

            <TextView
                android:id="@+id/language"
                style="@style/topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/sa"
                android:text="@string/language" />

            <TextView
                android:id="@+id/arabic"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/language"
                android:text="@string/arabic" />

            <TextView
                android:id="@+id/main_airport"
                style="@style/topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/arabic"
                android:text="@string/main_airport" />

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/main_airport"
                android:layout_toLeftOf="@id/imageView"
                android:text="@string/KKIA" />
        </RelativeLayout>

        <TextView
            style="@style/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <TextView
            style="@style/text"
            android:paddingRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_paragraph" />

        <TextView
            style="@style/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_time" />

        <TextClock
            android:id="@+id/textClock"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:format12Hour="hh:mm:ss a" />

        <TextView
            style="@style/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:paddingRight="6dp"
            android:clickable="true"
            android:enabled="true" />
    </LinearLayout>
</ScrollView>